# optimize_energy_consumption

./: appliance_optimizer.py  config.yaml  initial_training.ipynb  metric.py  pyproject.toml
