[tool.poetry]
name = "metric_article"
version = "0.1.0"
description = ""
authors = ["Guillaume Delepoulle <delepoulle@telecom-paris.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
